--- a/templates/reset_password/reset.html.twig
+++ b/templates/reset_password/reset.html.twig
@@ -4,9 +4,9 @@
 
 {% block body %}
 
-    <h1>Réinitialiser le mot de passe</h1>
+    <h1 class="text-center">Modifier votre mot de passe</h1>
 
-    <div class="col-10 mx-auto">
+    <div class="col-7 mx-auto">
 
         {{ form_start(resetForm) }}
             {{ form_row(resetForm.plainPassword) }}
