--- a/public/css/style.css
+++ b/public/css/style.css
@@ -503,6 +503,33 @@ iframe{
     min-height: 200px;
 }
 
+.btnmoins{
+    border: 1px solid rgba(61, 61, 61, 0.46);
+    height: 35px;
+    width: 35px;
+    display: block;
+    background-color:whitesmoke;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+.btnmoins:hover{
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.btnQuantity{
+    display: flex;
+    justify-content: center;
+}
+
+.btnQ{
+    border-top: 1px solid rgba(61, 61, 61, 0.46);
+    border-bottom: 1px solid rgba(61, 61, 61, 0.46);
+    height: 35px;
+    width: 35px;
+    
+}
+
 /*   PANIER -  FIN */
 
 
