--- a/templates/basket/index.html.twig
+++ b/templates/basket/index.html.twig
@@ -67,7 +67,7 @@
             </tbody>
         </table>
 
-        <div class="row justify-content-between">
+        <div class="row col-md-10 justify-content-between mx-auto mt-3">
             <a class="btn btn-danger col-md-3 ms-3" href="{{ path("basket_remove_all") }}">Vider le panier</a>
             <a class="btn btn-success col-md-3 me-3" href="">Payer</a>
         </div>
