--- a/templates/profil/edit.html.twig
+++ b/templates/profil/edit.html.twig
@@ -23,22 +23,12 @@
             <div id="zone" class="d-flex mt-2 m-auto text-center justify-content-center ">
                 {% if users.avatar %}
                     <img class="img-fluid img-thumbnail" src="{{ asset('img/avatarUpload/' ~ users.avatar)}}" alt="">
-                    <td><a href="{{ path("picture_delete", {'id': users.id} ) }}"><i class="delete-icon" data-feather="trash" title="supprimer"></i></a></td>
+                    <a href="{{ path("picture_delete", {'id': users.id} ) }}"><i class="delete-icon" data-feather="trash" title="supprimer"></i></a>
 
                 {% endif %}
-    </div>
             </div>
-        
-
-
-
-        {# {{ form_start(formMDP)}}
-                {{ form_row(formMDP.plainPassword)}}
-                <input type="submit" value="Mettre à jour" class="btn btn-warning col-md-2 mt-3">
-        {{ form_end(formMDP)}} #}
-
-
     </div>
+
 
 
 {% endblock %}
