--- a/templates/footer/footer.html.twig
+++ b/templates/footer/footer.html.twig
@@ -13,6 +13,11 @@
                         Conditions générales de vente
                     </a>
                 </li>
+                <li class="item">
+                    <a href="{{ path('app_mentions')}}" title="Conditions générales de vente">
+                        Mentions légales
+                    </a>
+                </li>
                 
         </ul>
     </section>
