--- a/public/css/style.css
+++ b/public/css/style.css
@@ -62,11 +62,10 @@
     width: 240px;
     margin-bottom: 20px;
     margin-right: 20px;
-    -webkit-animation: slide-in-left 1.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-        animation: slide-in-left 1.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+    transform: translate(-5%, -10%);
 }
 .navbar{
-    height: 85px;
+    height: 65px;
 }
 
 .navbar .nav-item{
@@ -99,7 +98,7 @@
 }
 .nav-cart-logo{
     position: absolute;
-    top: 20px;
+    top: 8px;
     width: 30px;
     opacity: 0.9;
     right: 3%;
@@ -113,7 +112,7 @@
 }
 
 .bg-navbar{
-    height: 55px;
+    height: 85px;
     background-color: #fcd80e;
     background-image: url("../img/Beer-bubbles.gif");
     background-position: 100% 25%;
@@ -139,6 +138,10 @@
     border-radius: 10px;
     margin: auto;
     background-color: white;
+}
+
+.btn-carousel{
+    display: none;
 }
 
 .card-container{
@@ -175,7 +178,7 @@
 .product-name{
     font-weight: 600;
     font-size: 1.2em;
-    margin-top: 10px;
+    margin-top: 20px;
 }
 .product-name-link{
     color: #1b0000;
@@ -195,10 +198,14 @@
     display: none;
 }
 .form-filters{
+    position: absolute;
     height: max-content;
+    left: 10px;
+    top: 180px;
 }
 .all-catalogue-container{
     flex-wrap: wrap;
+    width: 60%
 }
 .product-card-container{
     display: flex;
@@ -206,6 +213,7 @@
     align-items: center;
     text-align: center;
     height: 355px;
+    width: 50px;
     padding: 15px;
     transition: 0.2s;
     animation: ease-in-out;
@@ -537,6 +545,13 @@ iframe{
 
 /* MEDIA QUERIES */
 
+@media only screen and (max-width: 1700px) {
+    .form-filters{
+        position: unset;
+        margin-bottom: 20px;
+    }
+}
+
 @media only screen and (max-width: 1500px) {
     .Localisation{
         display: none;
@@ -544,7 +559,10 @@ iframe{
 }
 
 @media only screen and (max-width: 800px) {
-
+    .form-filters{
+        position: unset;
+        margin-bottom: 20px;
+    }
     #legal_age{
         display: flex;
         flex-direction: column;
@@ -554,7 +572,6 @@ iframe{
         z-index: 3;
         background-image: none;
     }
-
     .btn-age-container{
         flex-direction: column;
         justify-content: center;
@@ -569,6 +586,7 @@ iframe{
     .cookies_text_query_2{
         display: flex;
     }
+   
 }
 
 @media only screen and (min-width: 200px) and (max-width: 1000px) {
@@ -588,17 +606,23 @@ iframe{
         height: max-content;
     }
     #logo{
-        width: 270px;
+        width: 230px;
+        transform: translate(-5%, 0%);
     }
     .nav-cart-logo{
         right: 100px;
-        top: 58px;
+        top: 50px;
         transition: 0s;
     }
     .administration_nav{
         position: unset;
         right: unset;
     } 
+
+    .product-name{
+        font-size: 1em;
+        margin-top: 15px;
+    }
     
 }
 
