--- a/templates/nav.html.twig
+++ b/templates/nav.html.twig
@@ -4,7 +4,7 @@
   </div>
   <nav class="navbar navbar-expand-lg navbar-light p-3">
     <div class="container-fluid container-nav">
-      <a class="navbar-brand fw-bold fs-2" href="{{ path('app_home')}}"><img title="Accueil" id='logo' src="{{ asset("/img/nav/Logo.png")}}" alt="Logo et Accueil"></a>
+      <a class="navbar-brand fs-2" href="{{ path('app_home')}}"><img title="Accueil" id='logo' src="{{ asset("/img/nav/Logo.png")}}" alt="Logo et Accueil"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -44,9 +44,7 @@
         </ul>
       </div>
     </div>
-
      <a href="{{path('app_basket')}}"><img class="nav-cart-logo" src="{{ asset('/img/nav/cart.svg')}}" alt=""></a>
-
   </nav>
 </div>
 
