--- a/templates/products/catalogue.html.twig
+++ b/templates/products/catalogue.html.twig
@@ -6,9 +6,7 @@
 
 {% block body %}
 
-<div class="row col-11 m-auto">
-
-    <div class="shadow col-md-2 px-4 py-3 form-filters">
+<div class="shadow px-4 py-3 form-filters">
             <h4>Filtres</h4>
         {{ form_start(formFilter) }}
 
@@ -28,12 +26,12 @@
             <input type="submit" value="Rechercher" class="btn btn-primary mt-2">
 
         {{ form_end(formFilter) }}
-    </div>
+</div>
 
-    <div class="row all-catalogue-container justify-content-center col-md-10">
+    <div class="row mx-auto row all-catalogue-container justify-content-center mx-auto ">
         {% for product in products %}
             {% if product.status == 1 %}
-            <div class="col-md-3 product-card-container m-3" href="{{ path("fiche_produit", {'id': product.id} ) }}">
+            <div class="product-card-container col-3 mx-3 mt-3" href="{{ path("fiche_produit", {'id': product.id} ) }}">
                 <div class="top-card">
                     <a class="link-deco" href="{{  path("fiche_produit", {'id': product.id} )  }}" ><h5 class="text-center catalogue-product-title">{{ product.name|capitalize }}</h5></a>
                     <h6 class="product-styles text-center" > 🍻 {{ product.brewries.name }} - {{ product.styles.name }}</h6>
@@ -83,13 +81,16 @@
                 <a class="link-deco voir-eye" href="{{  path("fiche_produit", {'id': product.id} )  }}">👁️</a>
                 <p title="{{ product.brewries.countries.name }}">{{ product.brewries.countries.flag }}</p>
                 </div>
-            {% endif %}
             </div>
+            {% endif %}
+            
         {% else %}
-            <h4 class="text-center">Il n'y a plus de bières disponibles :pensive:</h4>
+            <style> .form-filters{ display: none;} </style>
+            <h4 class="text-center mt-4">Il n'y a pas de bières disponibles 😔</h4>
+            <a class="btn btn-dark col-1 mt-5" href="{{ path('catalogue') }}">Retour</a>
         {% endfor %}
     </div>
 
-</div>
+
 
 {% endblock %}
