--- a/templates/profil/index.html.twig
+++ b/templates/profil/index.html.twig
@@ -23,7 +23,7 @@
                 <th>Email</th>
                 <th>Adresse</th>
                 <th>CP</th>
-                <th>Info</th>
+                <th>Informations</th>
                 <th>Avatar</th>
             </tr>
         </thead>
@@ -33,7 +33,7 @@
                 <td>{{ users.email }}</td>
                 <td>{{ users.adress }}</td>
                 <td>{{ users.zip }}</td>
-                <td>{{ users.info }}</td>
+                <td class='fst-italic infos-profil'>{{ users.info }}</td>
 
                 <td>
                     {% if users.avatar %}
