--- a/public/css/style.css
+++ b/public/css/style.css
@@ -67,7 +67,6 @@
 .navbar{
     height: 65px;
 }
-
 .navbar .nav-item{
     font-size: large;
     font-weight: 600;
@@ -77,9 +76,6 @@
     background-image: linear-gradient(to top, #ffbc00, #ffca00, #ffd800, #ffe600, #fff400);
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
-
-
-
 .mousses-nav, .profil-nav{
     transition: 0.2s;
     opacity: 0.9;
@@ -190,7 +186,15 @@
 
 /*   ACCUEIL - FIN */
 
+/* PROFIL - DEBUT */
 
+
+.infos-profil{
+    font-size: 0.85em;
+}
+
+
+/* PROFIL - FIN */
 
 /*  CATALOGUE - DEBUT  */
 
@@ -201,7 +205,7 @@
     position: absolute;
     height: max-content;
     left: 10px;
-    top: 180px;
+    top: 200px;
 }
 .all-catalogue-container{
     flex-wrap: wrap;
