--- a/templates/basket/index.html.twig
+++ b/templates/basket/index.html.twig
@@ -76,7 +76,7 @@
             <a class="btn btn-danger col-md-2 mt-4 mx-auto btn-vider-panier" href="{{ path("basket_remove_all") }}">Vider le panier</a>
 
             {% if app.user %}
-                <a class="btn btn-success col-md-2 mt-4 mx-auto btn-payer" href="{{ path("basket_paiement")}}">Payer</a>
+                <a class="btn btn-success col-md-2 mt-4 mx-auto btn-payer" href="{{ path("paiement_page")}}">Payer</a>
             {% else %}
                 <h6 class="col-md-4 me-3 my-3 mx-auto">Veuillez vous <a href="{{ path('app_login') }}">connecter</a> pour passer au paiement</h6>
             {% endif %}
